# nexis-plugin-manager

./: CMakeLists.txt
include/: Downloader.h  PackageManager.h  nexis-plugins.h
src/: Downloader.cpp  nexis-plugins.cpp
